# Stock-Information-Aggregation

./: .env.docker.example  .env.example  .gitignore  AGENTS.md  README.md  compose.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: router.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: __init__.py  requests.py
backend/app/services/: analysis_service.py  event_bus.py  ingest_service.py  news_auto_sync_service.py  news_collector_service.py  news_llm_config_service.py  notification_service.py  paper_trading_service.py  push_message_service.py  real_collector_service.py  serializers.py  startup_sync_service.py  watch_stock_sync_service.py
backend/tests/: test_api.py  test_docker_delivery.py  test_openclaw_publisher.py  test_paper_trading.py  test_project_alignment.py  test_push_message_service.py
data/migrations/: 001_init.sql  002_news_llm_config.sql
frontend/: .dockerignore  Dockerfile  nginx.conf
frontend/src/: App.tsx  main.tsx  styles.css
frontend/tests/: paperTradingData.test.mjs
miniprogram/: README.md  app.js  app.json  app.wxss  config.js  project.config.json  project.private.config.example.json
miniprogram/services/: api.js  session.js
miniprogram/tests/: api-network-error.test.mjs  validate-miniprogram.mjs
miniprogram/utils/: chart.js  format.js
openclaw/: README.md  schedule.example.yml
openclaw/common/: scheduler.py
openclaw/market-alert-publisher/: run.py
openclaw/market-info-fetcher/: run.py
tools/: import_full_market_history.py
(+66 files in other folders)
