[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-agent-backend"
version = "0.1.0"
description = "Local securities market monitor backend"
requires-python = ">=3.11"
dependencies = [
  "akshare>=1.17.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pandas>=2.2.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2.0"]
test = ["pytest>=8.3.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
